--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "nikic/fast-route": "^1.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.3.1"
+        "phpunit/phpunit": "~5.7",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "autoload": {
         "psr-4": {
